somente mostrar os dados para os novos cadastros.

--- a/html/templates/product_details.html
+++ b/html/templates/product_details.html
@@ -50,12 +50,14 @@
               <div class="form-group">
                     <label class="control-label col-xs-3">{% trans "Data de Cadastro" %}:</label>
                     <div class="col-xs-9">
+                        {% if product.create_date %}
                         {% timezone "Brazil/East" %}
                         <p>{{ product.create_date|date:'SHORT_DATETIME_FORMAT' }} - <small>{% trans "Horário de Brasília" %}</small></p>
                         {% endtimezone %}
                         {% timezone "US/Eastern" %}
                         <p>{{ product.create_date|date:'SHORT_DATETIME_FORMAT' }} - <small>Eastern Time</small></p>
                         {% endtimezone %}
+                        {% endif %}
                     </div>
               </div>
 {% comment %}
