--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -49,7 +49,8 @@
 </head>
 
 <body id="page-top" class="lista-usuarios sistema">
-    <header class="bs-docs-nav navbar navbar-static-top header-sistema" id="top">
+
+ <header class="bs-docs-nav navbar navbar-static-top header-sistema" id="top">
         <div class="container">
             <div class="navbar-header">
                 <button aria-controls="bs-navbar" aria-expanded="false" class="collapsed navbar-toggle" data-target="#bs-navbar" data-toggle="collapse" type="button">
@@ -58,12 +59,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="" class="navbar-brand page-scroll"><img src="/static/img/logo_sup.png" /><img src="/static/img/logo_bottom.png" width="175" /></a>
+                <a href="/" class="navbar-brand page-scroll"><img src="/static/img/logo_sup.png" /><img src="/static/img/logo_bottom.png" width="175" /></a>
             </div>
             <nav class="collapse navbar-collapse" id="bs-navbar">
-                <ul class="nav navbar-nav">
-
-                </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if user|can_view_admin %}
                     <li class="dropdown">
@@ -218,37 +216,6 @@
             </div>
         </div>
     </div>
-    <!--
-    <div id="tutorial" class="modal fade">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h2 class="modal-title">{% trans "Tutorial de uso do sistema" %}</h2>
-                </div>
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-12 text-center">
-                                <h3 class="section-subheading text-muted">{% trans "Assista abaixo, nestes dois vídeos, o tutorial de como usar nossa plataforma" %}.</h3>
-                                <div class="col-md-6">
-                                    <h3>{% trans "Como se cadastrar e cadastrar seus produtos na nossa plataforma" %}</h3>
-                                    <iframe src="https://www.youtube.com/embed/_jovASHwz3s?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="100%" height="300"></iframe>
-                                </div>
-                                <div class="col-md-6">
-                                    <h3>{% trans "Veja como funciona o envio (Redirecionamento) na nossa plataforma" %}</h3>
-                                    <iframe src="https://www.youtube.com/embed/9Ikxuy0rSYY?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="100%" height="300"></iframe>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
-                </div>
-            </div>
-        </div>
-    </div>-->
 
     <!-- Loading basta dar display block-->
     <div class="loading" style="display: none;">{% trans "Carregando" %}...</div>
