--- a/html/templates/shipment_list.html
+++ b/html/templates/shipment_list.html
@@ -63,11 +63,11 @@
                 </form>
               </div>
           </div><br><br>
-          <div class="table-responsive">
-            {% if user|has_shipment_perm:'add_shipment' %}
+          {% if user|has_shipment_perm:'add_shipment' %}
             <a class="btn btn-default" href="{% url 'shipment_add' %}"><i class="fa fa-fw fa-plus-square"></i> {% trans "Criar Envio" %}</a>
-            {% endif %}
-          <br><br>
+          {% endif %}
+          <div class="table-responsive">
+          <br>
             {% if shipments.paginator.count > 0 %}
             <table class="table table-striped table-bordered">
               <thead>
@@ -96,7 +96,7 @@
                     {% trans "Ordenar pelo status" as order_status %}
                     <a title="{{ order_status }}" href="javascript:void(0);">{{ status }} <i class="fa fa-fw fa-sort-amount-asc"></i></a>
                   </th>
-                  <th class="center">{% trans "Ações" %}</th>
+                  <th class="center">{% trans "Visualizar" %}</th>
                 </tr>
               </thead>
               <tbody>
@@ -111,7 +111,7 @@
                   <td>{{ shipment.send_date }}</td>
                   <td class="center">{{ shipment.total_products }}</td>
                   <td class="center"> {{ shipment.get_status_display  }}</td>
-                  <td class="center"><a class="download" href="{% url 'shipment_details' shipment.id %}"><i class="fa fa-pencil"></i> {% trans "Visualizar" %}</a></td>
+                  <td class="center"><a class="download" href="{% url 'shipment_details' shipment.id %}"><i class="fa fa-pencil-square"></i> {% trans "Visualizar" %}</a></td>
                 </tr>
               {% endfor %}
               </tbody>
