--- a/html/templates/store_purchase.html
+++ b/html/templates/store_purchase.html
@@ -4,7 +4,7 @@
 
 {% block conteudo %}
 
-    <div class="container-fluid">
+   <div class="container-fluid">
       <div class="row">
         <div class="col-md-1 sidebar">
 
@@ -37,11 +37,14 @@
               </div>
           </div><br><br>
           <div class="row">
+            <br><br>
+            <a class="btn btn-default" href="#"><i class="fa fa-fw fa-check-square-o"></i> Confirmar Pagamento</a>
             <div class="table-responsive">
-
+            <br>
             <table class="table table-striped table-bordered">
               <thead>
                 <tr>
+                  <th></th>
                   <th><a title="Ordenar pelo pedido" href="javascript:void(0);">Pedido <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
                   <th><a title="Ordenar pelo Produto" href="javascript:void(0);">Produto <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
                   <th class="center"><a title="Ordenar pela Data de Envio" href="javascript:void(0);">Data de Envio <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
@@ -51,8 +54,8 @@
                 </tr>
               </thead>
               <tbody>
-
                 <tr>
+                  <td><input type="checkbox" id="confirmapgt" name="confirmapgt" /></td>
                   <td>234354</td>
                   <td class="limit-field">Poker-Keeno Set in Tin</td>
                   <td class="center">11 de Maio de 2017</td>
@@ -64,6 +67,7 @@
                 </tr>
 
                 <tr>
+                  <td><input type="checkbox" id="confirmapgt" name="confirmapgt" /></td>
                   <td>5446432</td>
                   <td class="limit-field">5 Camisas Ck pretas</td>
                   <td class="center">11 de Abril de 2017</td>
@@ -73,7 +77,6 @@
                       <a class="download" href="/lote/detalhe"><i class="fa fa-pencil"></i> Detalhe</a>
                   </td>
                 </tr>
-
               </tbody>
             </table>
 
