suporte a parceiro, internacionalização, avanços: lote e preço x período

--- a/html/templates/product_details.html
+++ b/html/templates/product_details.html
@@ -84,7 +84,7 @@
                 <div class="form-group">
                     <label class="control-label col-xs-3">{% trans "Usuário" %}:</label>
                     <div class="col-xs-9">
-                        <p>{{ product.user.first_name }}</p>
+                        <p>{{ product.user.first_name }} ({{ product.user.email }})</p>
                     </div>
                 </div>
               {% endif %}
