Traducoes de termos que ainda estavam em pt

--- a/html/templates/product_details.html
+++ b/html/templates/product_details.html
@@ -127,7 +127,7 @@
               <a href="#" class="btn btn-danger send-btn-delete"><i class="fa fa-fw fa-trash"></i> {% trans "Excluir" %}</a>
               {% endif %}
               <br><br>
-              <a href="javascript:history.back()"><i class="fa fa-fw fa-long-arrow-left"></i> Voltar</a><br><br><br>
+              <a href="javascript:history.back()"><i class="fa fa-fw fa-long-arrow-left"></i> {% trans "Voltar" %}</a><br><br><br>
             </div>
         </div>
         <div class="col-md-3 sidebar">
