--- a/html/templates/user_reset_password.html
+++ b/html/templates/user_reset_password.html
@@ -94,6 +94,34 @@
             {% endif %}
         </div>
     </div>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <span class="copyright">{% trans "Copyright &copy; Vendedor Online 2017" %}</span>
+                </div>
+                <div class="col-md-3">
+                    <ul class="list-inline social-buttons"><!--
+                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        </li>-->
+                        <li><a href="https://www.facebook.com/groups/vendedorinternacional/">Facebook</a>
+                        </li><!--
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        </li>-->
+                    </ul>
+                </div>
+                <div class="col-md-5">
+                    <ul class="list-inline quicklinks">
+                        <li>
+                            {% trans "<a href='/termos-e-condicoes-de-uso.html'>Termos e Condições de Uso" %}</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
      <!-- Modal confirmacao de acao-->
     <script type="text/javascript">
     $(function(){
