--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -57,10 +57,16 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-3">
-                <h3>{% trans "A melhor plataforma de " %}</h3>
+            <div class="col-md-1">
             </div>
-            <div class="col-md-9">
+            <div class="col-md-4">
+                <img src="/static/img/imagem-cadastro.png" width="100%" />
+                <br><br><br>
+                <label> {% trans "Leia <a href='/termos-e-condicoes-de-uso.html' class='download'>aqui</a> nossos termos e condições de uso da plataforma." %}</label>
+                <br /><br><br>
+                <label> {% trans "Se ainda tiver dúvidas, veja nossos tutorias de utilização da plataforma <a href='/ajuda.html' class='download'>aqui</a>." %}</label>
+            </div>
+            <div class="col-md-6">
                 <form action="" method="post" class="form-cad-cliente" id="form-add-user">
                   {% csrf_token %}
                   <div class="form-group">
@@ -430,12 +436,43 @@
                   </div>
 
                   <button type="submit" id="send-btn" class="btn btn-primary">{% trans "Enviar" %}</button><br><br>
-                  <a href="/"><i class="fa fa-fw fa-long-arrow-left"></i> {% trans "Voltar" %}</a><br><br><br>
                 </form>
             </div>
-
+            <div class="col-md-1">
+            </div><br><br>
+            <div class="col-md-12">
+                <a href="/"><i class="fa fa-fw fa-long-arrow-left"></i> {% trans "Voltar" %}</a><br><br><br><br>
+            </div>
         </div>
     </div>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <span class="copyright">{% trans "Copyright &copy; Vendedor Online 2017" %}</span>
+                </div>
+                <div class="col-md-3">
+                    <ul class="list-inline social-buttons"><!--
+                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        </li>-->
+                        <li><a href="https://www.facebook.com/groups/vendedorinternacional/">Facebook</a>
+                        </li><!--
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        </li>-->
+                    </ul>
+                </div>
+                <div class="col-md-5">
+                    <ul class="list-inline quicklinks">
+                        <li>
+                            {% trans "<a href='/termos-e-condicoes-de-uso.html'>Termos e Condições de Uso" %}</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <!-- Modal confirmacao de acao-->
     <script type="text/javascript">
     $(function(){
