--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -253,12 +253,17 @@
                     <h4 class="modal-title">{% trans "Importante!" %}</h4>
                 </div>
                 <div class="modal-body">
-                    <p>{% trans "Nossos termos foram atualizados. Para uma maior agilidade e transparência no atendimento aos nossos usuários, a partir de agora os valores dos envios são calculados de acordo com o tempo de permanência conosco. Seguem os valores:" %}</p>
-                    <p>{% trans "Produto em estoque conosco até 30 dias: USD 1,29 por produto" %}</p>
-                    <p>{% trans "Produto em estoque conosco de 31 até 45 dias: USD 1,39 por produto" %}</p>
-                    <p>{% trans "Produto em estoque conosco de 46 até 60 dias: USD 1,99 por produto" %}</p>
-                    <p>{% trans "A partir do dia 61, o produto será considerado abandonado e retirado do estoque do usuário." %}</p>
-                    <p>{% trans "Veja nossos termos <a href='/termos-e-condicoes-de-uso.html' class='download'>clicando aqui</a>" %}</p>
+                    <p>Olá, NOMEDOUSUARIO.</p>
+                    <p>Os termos e condições de uso da nossa plataforma foram atualizados. <a href='/termos-e-condicoes-de-uso.html' class='download'>Confira clicando aqui</a>. Duas informações importantes para você.</p>
+                    <p><strong>Primeiro:</strong><br />Para uma maior agilidade e transparência no atendimento aos nossos usuários, a partir de agora os valores dos envios são calculados de acordo com o tempo de permanência conosco.</p><p><strong> Seguem os valores:</strong></p>
+                    <p>Produto em estoque conosco até 45 dias: USD 1,29 por produto</p>
+                    <p>Produto em estoque conosco de 46 até 75 dias: USD 1,39 por produto</p>
+                    <p>Produto em estoque conosco de 76 até 90 dias: USD 1,99 por produto</p>
+                    <p>A partir do dia 91, o produto será considerado abandonado e retirado do estoque do usuário.</p>
+                    <p></p>
+                    <p><strong>Segundo:</strong> <br />
+                    Para sua segurança e conforto, se você ainda não aceitou nossos termos, pode fezê-lo agora clicando no botão abaixo:</p>
+                    <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-check-circle"></i> {% trans "Aceito os termos e condições de uso" %}</a>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
