--- a/html/templates/user_reset_password.html
+++ b/html/templates/user_reset_password.html
@@ -57,10 +57,13 @@
     <div class="container">
         <div class="row">
             {% if finish %}
-            <p>{% trans "Senha alterada com sucesso." %}</p>
-            <p><a href="/login">{% trans "Clique aqui" %}</a> {% trans "para realizar o seu login no sistema." %}</p>
-            {% else %}
-                {% if success or valid %}
+                <div class="box-resposta">
+                    <p>{% trans "Senha alterada com sucesso." %}</p>
+                    <p><a class="download" href="/login">{% trans "Clique aqui" %}</a> {% trans "para realizar o seu login no sistema." %}</p>
+                    {% else %}
+                        {% if success or valid %}
+                </div>
+
             {% url 'user_reset_password' uidb64=uidb64 token=token as my_url %}
             <form action="{{ my_url }}" method="post" class="form-cad-cliente" id="form-reset-password">
               {% csrf_token %}
@@ -95,7 +98,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="fixed-footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
