--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -446,7 +446,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="fixed-footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
