--- a/html/templates/user_validation.html
+++ b/html/templates/user_validation.html
@@ -77,7 +77,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="fixed-footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
