--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -445,8 +445,7 @@
             </div>
         </div>
     </div>
-
-    <footer class="fixed-footer">
+    <footer>
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
